# json-benchmark

./: Dockerfile  README.md  analyze_results.py  deployment.yml  docker-compose.yml  fetch_data.py  kubernetes.yml  pyproject.toml  requirements.txt  tests.py
